feat: Added second blog

--- a/style.css
+++ b/style.css
@@ -30,10 +30,17 @@ nav {
     width: 100%;
     padding: 10px 10%;
     background-color: var(--base-text-color);
+}
+
+.nav-desktop {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
+}
+
+.nav-desktop p {
+    margin: 0;
 }
 
 nav .categories {
@@ -76,6 +83,10 @@ nav .call-button {
 
 nav .call-button:hover {
     color: var(--background-color) !important;
+}
+
+.nav-mobile {
+    display: none;
 }
 
 /* Blog specific */
@@ -539,7 +550,7 @@ article.blog-wide {
     display: inline-block;
     text-decoration: none;
     background: var(--accent-dark-color);
-    color: var(--base-text-color);
+    color: var(--background-color);
     text-transform: uppercase;
     box-shadow: 5px 15px 40px rgba(0, 201, 224, .2);
     border: 0;
@@ -726,6 +737,14 @@ aside a:hover {
     .blog div.image img {
         width: 90%;
     }
+
+    nav {
+        padding: 10px 5%;
+    }
+
+    nav .categories a {
+        margin: auto 10px;
+    }
 }
 
 @media (max-width:768px) {
@@ -746,6 +765,144 @@ aside a:hover {
         font-size: .8rem;
         letter-spacing: 0px;
     }
+
+    .blog .related-extrabig,
+    .blog .related-xxl {
+        padding: 10% 5%;
+    }
+
+    .blog .related-extrabig strong,
+    .blog .related-xxl strong {
+        font-size: 2.2em;
+    }
+
+    .archive {
+        margin: 2vh auto;
+    }
+
+    .blog .main-button {
+        font-size: .9rem;
+        letter-spacing: 0;
+        padding: 10px 18px;
+        border-radius: 4px;
+    }
+
+    .archive .main-button {
+        max-width: 180px;
+    }
+
+    .author-box {
+        padding: 2em 1em 5%;
+    }
+
+    .author-description {
+        font-size: 1.1rem;
+        padding: 0;
+    }
+
+    /* Mobile nav */
+
+    nav {
+        height: 65px;
+    }
+
+
+    .nav-desktop {
+        display: none;
+    }
+
+    .nav-mobile {
+        display: block;
+    }
+
+    #menuToggle {
+        position: relative;
+        top: 15px;
+        left: 15px;
+        z-index: 1;
+    }
+
+    #menuToggle input {
+        display: flex;
+        width: 40px;
+        height: 32px;
+        position: absolute;
+        cursor: pointer;
+        opacity: 0;
+        z-index: 2;
+    }
+
+    #menuToggle span {
+        display: flex;
+        width: 29px;
+        height: 2px;
+        margin-bottom: 5px;
+        position: relative;
+        background: #ffffff;
+        border-radius: 3px;
+        z-index: 1;
+        transform-origin: 5px 0px;
+        transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1.0),
+            background 0.5s cubic-bezier(0.77, 0.2, 0.05, 1.0),
+            opacity 0.55s ease;
+    }
+
+    #menuToggle span:first-child {
+        transform-origin: 0% 0%;
+    }
+
+    #menuToggle span:nth-last-child(2) {
+        transform-origin: 0% 100%;
+    }
+
+    #menuToggle input:checked~span {
+        opacity: 1;
+        transform: rotate(45deg) translate(-3px, -1px);
+        background: #36383F;
+    }
+
+    #menuToggle input:checked~span:nth-last-child(3) {
+        opacity: 0;
+        transform: rotate(0deg) scale(0.2, 0.2);
+    }
+
+    #menuToggle input:checked~span:nth-last-child(2) {
+        transform: rotate(-45deg) translate(0, -1px);
+    }
+
+    #menu {
+        position: fixed;
+        width: 280px;
+        height: 100vh;
+        box-shadow: 0 0 10px #85888C;
+        margin: -50px 0 0 -50px;
+        padding: 50px;
+        padding-top: 125px;
+        background-color: var(--background-color);
+        -webkit-font-smoothing: antialiased;
+        transform-origin: 0% 0%;
+        transform: translate(-100%, 0);
+        transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1.0);
+    }
+
+    #menu li {
+        padding: 10px 0;
+    }
+
+    #menu li a {
+        color: var(--base-text-color);
+        text-decoration: none;
+        transition: color .1s ease-in-out;
+        text-transform: uppercase;
+        letter-spacing: .05em;
+        font-weight: 500;
+        line-height: 40px;
+        margin: auto 20px;
+    }
+
+    #menuToggle input:checked~ul {
+        transform: none;
+    }
 }
 
 @media (max-width:550px) {
@@ -762,6 +919,11 @@ aside a:hover {
     .blog .meta span,
     .blog .meta p {
         margin: 10px;
+    }
+
+    .blog .related-extrabig strong,
+    .blog .related-xxl strong {
+        font-size: 2em;
     }
 }
 
