--- a/style.css
+++ b/style.css
@@ -89,6 +89,27 @@ nav .call-button:hover {
     display: none;
 }
 
+main.not-found {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+}
+
+.not-found .gif-container {
+    max-width: 500px;
+}
+
+.not-found .gif-container img {
+    width: 100%;
+}
+
+.not-found p {
+    font-size: 1.2rem;
+}
+
+
 /* Blog specific */
 
 div.blog,
@@ -803,7 +824,106 @@ aside a:hover {
 
     /* Mobile nav */
 
+    nav {
+        height: 65px;
+    }
 
+    .nav-desktop {
+        display: none;
+    }
+
+    .nav-mobile {
+        display: block;
+    }
+
+    #menuToggle {
+        position: relative;
+        top: 15px;
+        left: 15px;
+        z-index: 1;
+    }
+
+    #menuToggle .hamburger {
+        display: flex;
+        width: 40px;
+        height: 32px;
+        position: absolute;
+        cursor: pointer;
+        opacity: 0;
+        z-index: 2;
+    }
+
+    #menuToggle span {
+        display: flex;
+        width: 29px;
+        height: 2px;
+        margin-bottom: 5px;
+        position: relative;
+        background: #ffffff;
+        border-radius: 3px;
+        z-index: 1;
+        transform-origin: 5px 0px;
+        transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1.0),
+            background 0.5s cubic-bezier(0.77, 0.2, 0.05, 1.0),
+            opacity 0.55s ease;
+    }
+
+    #menuToggle span:first-child {
+        transform-origin: 0% 0%;
+    }
+
+    #menuToggle span:nth-last-child(2) {
+        transform-origin: 0% 100%;
+    }
+
+    #menuToggle .hamburger.open~span {
+        opacity: 1;
+        transform: rotate(45deg) translate(-3px, -1px);
+        background: var(--base-text-color);
+    }
+
+    #menuToggle .hamburger.open~span:nth-last-child(3) {
+        opacity: 0;
+        transform: rotate(0deg) scale(0.2, 0.2);
+    }
+
+    #menuToggle .hamburger.open~span:nth-last-child(2) {
+        transform: rotate(-45deg) translate(0, -1px);
+    }
+
+    #menu {
+        position: fixed;
+        width: 280px;
+        height: 100vh;
+        box-shadow: 0 0 10px #85888C;
+        margin: -50px 0 0 -50px;
+        padding: 50px;
+        padding-top: 125px;
+        background-color: var(--background-color);
+        -webkit-font-smoothing: antialiased;
+        transform-origin: 0% 0%;
+        transform: translate(-100%, 0);
+        transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1.0);
+    }
+
+    #menu li {
+        padding: 10px 0;
+    }
+
+    #menu li a {
+        color: var(--base-text-color);
+        text-decoration: none;
+        transition: color .1s ease-in-out;
+        text-transform: uppercase;
+        letter-spacing: .05em;
+        font-weight: 500;
+        line-height: 40px;
+        margin: auto 20px;
+    }
+
+    #menuToggle .hamburger.open~ul {
+        transform: none;
+    }
 }
 
 @media (max-width:550px) {
